[gd_scene load_steps=5 format=2]

[ext_resource path="res://scipts/projectile.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/laser_test.png" type="Texture" id=2]
[ext_resource path="res://art/lights/ellipse_light.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[node name="projectile" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="travel_light" type="Light2D" parent="." index="1"]

enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
texture_scale = 10.0
color = Color( 0.816406, 0.255127, 0.255127, 1 )
energy = 1.0
mode = 2
range_height = 10.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.477623, -0.224758 )
scale = Vector2( 0.737202, 1.2589 )
shape = SubResource( 1 )

[node name="duration_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="discharge_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_projectile_body_entered"]

[connection signal="timeout" from="duration_timer" to="." method="_on_duration_timer_timeout"]

[connection signal="timeout" from="discharge_timer" to="." method="_on_discharge_timer_timeout"]


